tests/errors/syn.invalid-op.op.or
main :: () -> void {
    3 ! 5;
};
